--- a/02_profiling/chapter2.ipynb
+++ b/02_profiling/chapter2.ipynb
@@ -278,23 +278,23 @@
    "id": "4a1be6cc",
    "metadata": {},
    "source": [
-    "<span style=\"font-family: monospace\"> ~# python3 -m timeit -n 5 -r 1 -s \"import julia1\" \"julia1.calc_pure_python(False, desired_width=1000, max_iterations=300)\"  \n",
-    "Length of x: 1000  \n",
-    "Total elements: 1000000  \n",
-    "calculate_z_serial_purepython took 4.655411958694458 seconds  \n",
-    "Length of x: 1000  \n",
-    "Total elements: 1000000  \n",
-    "calculate_z_serial_purepython took 4.67050313949585 seconds  \n",
-    "Length of x: 1000  \n",
-    "Total elements: 1000000  \n",
-    "calculate_z_serial_purepython took 4.703853130340576 seconds  \n",
-    "Length of x: 1000  \n",
-    "Total elements: 1000000  \n",
-    "calculate_z_serial_purepython took 4.689031362533569 seconds  \n",
-    "Length of x: 1000  \n",
-    "Total elements: 1000000  \n",
-    "calculate_z_serial_purepython took 4.6835267543792725 seconds  \n",
-    "5 loops, best of 1: 4.96 sec per loop\n",
+    "<span style=\"font-family: monospace\"> ~# python3 -m timeit -n 5 -r 1 -s \"import julia1\" \"julia1.calc_pure_python(False, desired_width=1000, max_iterations=300)\"<br>\n",
+    "Length of x: 1000<br>\n",
+    "Total elements: 1000000<br>\n",
+    "calculate_z_serial_purepython took 4.655411958694458 seconds <br>\n",
+    "Length of x: 1000<br>\n",
+    "Total elements: 1000000<br>\n",
+    "calculate_z_serial_purepython took 4.67050313949585 seconds<br>\n",
+    "Length of x: 1000<br>\n",
+    "Total elements: 1000000<br>\n",
+    "calculate_z_serial_purepython took 4.703853130340576 seconds<br>\n",
+    "Length of x: 1000<br>\n",
+    "Total elements: 1000000<br>\n",
+    "calculate_z_serial_purepython took 4.689031362533569 seconds<br>\n",
+    "Length of x: 1000<br>\n",
+    "Total elements: 1000000<br>\n",
+    "calculate_z_serial_purepython took 4.6835267543792725 seconds<br>\n",
+    "5 loops, best of 1: 4.96 sec per loop<br>\n",
     "</span>"
    ]
   },
@@ -362,12 +362,12 @@
    "id": "069d3e10",
    "metadata": {},
    "source": [
-    "<span style=\"font-family: monospace\">~# /usr/bin/time -p python3 julia1_nopil.py  \n",
-    "Length of x: 1000  \n",
-    "Total elements: 1000000  \n",
-    "calculate_z_serial_purepython took 4.511674404144287 seconds  \n",
-    "real 4.79  \n",
-    "user 4.77  \n",
+    "<span style=\"font-family: monospace\">~# /usr/bin/time -p python3 julia1_nopil.py<br>\n",
+    "Length of x: 1000<br>\n",
+    "Total elements: 1000000<br>\n",
+    "calculate_z_serial_purepython took 4.511674404144287 seconds<br>\n",
+    "real 4.79<br>\n",
+    "user 4.77<br>\n",
     "sys 0.02</span>"
    ]
   },
@@ -376,32 +376,32 @@
    "id": "54fe2918",
    "metadata": {},
    "source": [
-    "<span style=\"font-family: monospace\">~# /usr/bin/time --verbose python3 julia1_nopil.py  \n",
-    "Length of x: 1000  \n",
-    "Total elements: 1000000  \n",
-    "calculate_z_serial_purepython took 4.490870237350464 seconds  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; Command being timed: \"python3 julia1_nopil.py\"  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; User time (seconds): 4.73  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; System time (seconds): 0.03  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; Percent of CPU this job got: 100%  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; Elapsed (wall clock) time (h:mm:ss or m:ss): 0:04.76  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; Average shared text size (kbytes): 0  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; Average unshared data size (kbytes): 0  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; Average stack size (kbytes): 0  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; Average total size (kbytes): 0  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; Maximum resident set size (kbytes): 99540  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; Average resident set size (kbytes): 0  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; Major (requiring I/O) page faults: 0  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; Minor (reclaiming a frame) page faults: 24087  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; Voluntary context switches: 1  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; Involuntary context switches: 6  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; Swaps: 0  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; File system inputs: 0  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; File system outputs: 0  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; Socket messages sent: 0  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; Socket messages received: 0  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; Signals delivered: 0  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; Page size (bytes): 4096  \n",
+    "<span style=\"font-family: monospace\">~# /usr/bin/time --verbose python3 julia1_nopil.py<br>\n",
+    "Length of x: 1000<br>\n",
+    "Total elements: 1000000<br>\n",
+    "calculate_z_serial_purepython took 4.490870237350464 seconds<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; Command being timed: \"python3 julia1_nopil.py\"<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; User time (seconds): 4.73<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; System time (seconds): 0.03<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; Percent of CPU this job got: 100%<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; Elapsed (wall clock) time (h:mm:ss or m:ss): 0:04.76<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; Average shared text size (kbytes): 0<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; Average unshared data size (kbytes): 0<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; Average stack size (kbytes): 0<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; Average total size (kbytes): 0<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; Maximum resident set size (kbytes): 99540<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; Average resident set size (kbytes): 0<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; Major (requiring I/O) page faults: 0<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; Minor (reclaiming a frame) page faults: 24087<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; Voluntary context switches: 1<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; Involuntary context switches: 6<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; Swaps: 0<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; File system inputs: 0<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; File system outputs: 0<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; Socket messages sent: 0<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; Socket messages received: 0<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; Signals delivered: 0<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; Page size (bytes): 4096<br>\n",
     "&nbsp;&nbsp;&nbsp;&nbsp; Exit status: 0</span>"
    ]
   },
@@ -647,7 +647,7 @@
    "id": "7e89dc83",
    "metadata": {},
    "source": [
-    "<span style=\"font-family: monospace\">~# pip install snakeviz  \n",
+    "<span style=\"font-family: monospace\">~# pip install snakeviz<br>\n",
     "~# python3 -m snakeviz profile.stats</span>"
    ]
   },
@@ -673,8 +673,8 @@
    "metadata": {},
    "source": [
     "**예제 2-6** kernprof를 사용해 프로파일해서 각 줄의 CPU 비용 기록하기  \n",
-    "<span style=\"font-family: monospace\">~# pip install line_profiler  \n",
-    "    ~# kernprof -l -v julia1_lineprofiler.py</span>"
+    "<span style=\"font-family: monospace\">~# pip install line_profiler<br>\n",
+    "~# kernprof -l -v julia1_lineprofiler.py</span>"
    ]
   },
   {
@@ -984,7 +984,7 @@
    "source": [
     "메모리를 프로파일하면 코드의 실행속도는 평소보다 10배에서 100배까지 느려진다. 보통 memory_profiler보다 line_profiler를 더 자주 사용한다.  \n",
     "  \n",
-    "<span style=\"font-family: monospace\">~# pip install memory_profiler  \n",
+    "<span style=\"font-family: monospace\">~# pip install memory_profiler<br>\n",
     "~# pip install psutil</span>"
    ]
   },
@@ -1712,14 +1712,6 @@
     "\n",
     "================================= 1 passed in 3.03 seconds =================================="
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8e9a5a98",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
